# theoria

./: LICENSE  README.md  linked_list.ipynb  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: commit.yml  tests.yml  theoria.yml
notebooks/computer_science/algorithms/backtracking/: __basic__technique.ipynb  __intermediate__combination_sum.ipynb  (+3 more)
notebooks/finance/: __basic__data_download_and_analysis.ipynb
notebooks/finance/data/: __basic__data_download_and_analysis.ipynb
notebooks/finance/interest_rate/: __intermediate__curve_building.ipynb  __intermediate__interest_rate_swaps.ipynb
notebooks/finance/options/: __basic__black_scholes.ipynb  __basic__greeks.ipynb  __basic__option_basics.ipynb
notebooks/finance/order_book/: __intermediate__lob_implementation.ipynb  __proficient__avellaneda_stoikov_model.ipynb
notebooks/mathematics/automatic_differentiation/: __basic__dual_numbers.ipynb  __basic__forward_mode_ad.ipynb  __basic__helper__dumpy.ipynb  dual_numbers.py  dumpy.py
notebooks/mathematics/linear_algebra/: __basic__lu_decomposition.ipynb
notebooks/mathematics/monte_carlo/: __basic__monte_carlo_estimator.ipynb  __inermediate__pi_estimation.ipynb
notebooks/mathematics/pde/: __intermediate__second_order.ipynb  second_order.ipynb
notebooks/mathematics/root_finding/: __basic__newton_raphson.ipynb
notebooks/physics/relativity/: __intermediate__special_relativity.ipynb
notebooks/software_development/databases/: __basic__database_concepts.ipynb
notebooks/software_development/networking/: __basic__networking_basic.ipynb
notebooks/statistics/: __basic__central_limit_theorem.ipynb  __basic__weak_law_of_large_numbers.ipynb
notebooks/statistics/regression/: __basic__linear_regression.ipynb
notebooks/statistics/stochastic_calculus/: __basic__brownian_motion.ipynb
notebooks/statistics/theorems/: __basic__bootstrap.ipynb  __basic__central_limit_theorem.ipynb  __basic__weak_law_of_large_numbers.ipynb
theoria/: validor.py
(+78 files in other folders)
