[project]
name = "theoria"
version = "0.1.0"
description = "Interactive notebooks for learning the quant stack"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Kelvin Chiu", email = "kchiu1997@gmail.com"}]
maintainers = [{name = "Kelvin Chiu", email = "kchiu1997@gmail.com"}]
keywords = ["quant", "finance", "statistics", "data-science", "jupyter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Framework :: Jupyter",
]

dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "ipykernel>=6.29",
    "importnb>=2023.11.1",
    "jupyterlab>=4.2",
    "papermill>=2.6",
]

[project.optional-dependencies]
cs = [
    "networkx>=3.3",
    "numba>=0.62.1",
]
math = [
    "sympy>=1.13",
]
stats = [
    "statsmodels",
    "scikit-learn>=1.8.0",
]
finance = [
    "yfinance>=0.2.44",
]
visualisation = [
    "matplotlib>=3.9",
    "plotly>=5.24",
    "seaborn>=0.13",
]
dev = [
    "sortedcontainers>=2.4.0",
    "tqdm>=4.66",
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-cov>=5.1",
    "mypy>=1.12",
    "nb-mypy>=1.0.6",
    "ipython>=9.6.0",
    "tabulate>=0.9.0",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["theoria"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "Q", "I", "N", "S", "T20"]
ignore = ["E501", "N803", "N806"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
